--- a/Frontend/src/components/UI/TextEditor/style.css
+++ b/Frontend/src/components/UI/TextEditor/style.css
@@ -4,7 +4,7 @@
 
 .ck-rounded-corners .ck.ck-editor__top .ck-sticky-panel .ck-toolbar, .ck.ck-editor__top .ck-sticky-panel .ck-toolbar.ck-rounded-corners {
   border: none;
-  background-color: transparent;
+  background-color: var(--color-white);
   border-bottom: 1px solid #b8b5c1;
   /*border-top-left-radius: var(--radius);*/
   /*border-top-right-radius: var(--radius);*/
